Updated baseline forecast models

--- a/challenge_1/notebooks_datascience/4_0_forecast_daily_baseline.ipynb
+++ b/challenge_1/notebooks_datascience/4_0_forecast_daily_baseline.ipynb
@@ -3003,7 +3003,7 @@
    "source": [
     "## Daily data\n",
     "\n",
-    "Daily data is far less noisy than half houly, lets compare prediction accuracy"
+    "Daily data is far less noisy than half houly, lets compare prediction accuracy\n"
    ]
   },
   {
