Updated baseline forecast models

--- a/challenge_1/notebooks_datascience/4_2_forecast_ML.ipynb
+++ b/challenge_1/notebooks_datascience/4_2_forecast_ML.ipynb
@@ -351,6 +351,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots\n",
+    "\n",
+    "Display history and forecasts on same plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daily data\n",
+    "\n",
+    "Run models on daily dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
