--- a/challenge_1/notebooks/2_0_data_exploration.ipynb
+++ b/challenge_1/notebooks/2_0_data_exploration.ipynb
@@ -814,6 +814,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### One week plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One day plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data per household"
    ]
   },
@@ -1612,7 +1626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
