--- a/challenge_1/notebooks/2_1_energy_plots.ipynb
+++ b/challenge_1/notebooks/2_1_energy_plots.ipynb
@@ -1301,6 +1301,20 @@
     "for mac in mac_list:\n",
     "    plot_range(halfhourly_all, mac, \"plots\", summer_start_2013, summer_end_2013)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1320,7 +1334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
