--- a/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
@@ -2026,7 +2026,8 @@
      "text": [
       "epoch      trn_loss   val_loss   rmse       \n",
       "    0      1.168089   1.473121   1.006735  \n",
-      " 56%|█████▌    | 10941/19569 [01:22<01:05, 132.23it/s, loss=0.416]"
+      "    1      0.590093   0.454347   0.492191  \n",
+      " 27%|██▋       | 5192/19569 [00:39<01:50, 130.41it/s, loss=0.747]"
      ]
     }
    ],
