--- a/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "hidden": true
    },
@@ -2027,8 +2027,18 @@
       "epoch      trn_loss   val_loss   rmse       \n",
       "    0      1.168089   1.473121   1.006735  \n",
       "    1      0.590093   0.454347   0.492191  \n",
-      " 27%|██▋       | 5192/19569 [00:39<01:50, 130.41it/s, loss=0.747]"
+      "    2      0.40567    0.266747   0.366612  \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.26675]), 0.36661225645790607]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2041,7 +2051,29 @@
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "226ca0508acd48a8a0ab17c7f4a709a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Epoch', max=3), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 80%|███████▉  | 15579/19569 [01:57<00:30, 132.34it/s, loss=0.255]"
+     ]
+    }
+   ],
    "source": [
     "m.fit(lr, 3, metrics=[rmse], cycle_len=1)"
    ]
