--- a/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN.ipynb
@@ -2070,7 +2070,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 80%|███████▉  | 15579/19569 [01:57<00:30, 132.34it/s, loss=0.255]"
+      "epoch      trn_loss   val_loss   rmse       \n",
+      "    0      0.233037   0.132719   0.2939    \n",
+      "    1      0.232677   0.127311   0.283511  \n",
+      " 22%|██▏       | 4381/19569 [00:33<01:55, 131.95it/s, loss=0.317]"
      ]
     }
    ],
