image similarity clustering

--- a/challenge_1/notebooks/3_0_clustering_ds.ipynb
+++ b/challenge_1/notebooks/3_0_clustering_ds.ipynb
@@ -1440,8 +1440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for image-similarity-clustering we need a tab delimited csv of file names\n",
-    "cluster_names = [f for f in listdir('plots/clustering/') if isfile(join('plots/clustering/', f))]"
+    "#see notebook 3_0_a_clustering_tsne for clutering plots and example clusters"
    ]
   },
   {
@@ -1449,33 +1448,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cluster_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d={}\n",
-    "for n in cluster_names:\n",
-    "    id = n.split('.')[0]\n",
-    "    d[id] = n\n",
-    "\n",
-    "image_df = pd.from_dict(d, columns=('id','image'))\n",
-    "image_df.to_csv('{0}+image_df.csv'.format(PATH), sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#now we run image-similarity-clustering (https://github.com/zegami/image-similarity-clustering) - see challenge_1/scripts/image-similarity-clustering"
-   ]
+   "source": []
   }
  ],
  "metadata": {
