--- a/challenge_1/notebooks/3_0_clustering_ds.ipynb
+++ b/challenge_1/notebooks/3_0_clustering_ds.ipynb
@@ -1419,9 +1419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1132 households plotted\n"
+     ]
+    }
+   ],
    "source": [
     "i=0\n",
     "for k, v in d.items():\n",
