--- a/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
@@ -3292,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {
     "hidden": true
    },
@@ -3318,8 +3318,18 @@
       "epoch      trn_loss   val_loss   rmse       \n",
       "    0      0.100901   0.155446   0.376431  \n",
       "    1      0.104432   0.155405   0.376407  \n",
-      " 62%|██████▏   | 90732/147084 [11:44<07:17, 128.76it/s, loss=0.105]"
+      "    2      0.09195    0.155258   0.376308  \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.15526]), 0.3763079823424793]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3337,7 +3347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3355,7 +3365,29 @@
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48938c540a6644b0ba4358bbc32123e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Epoch', max=3), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 13%|█▎        | 19800/147084 [02:35<16:39, 127.28it/s, loss=0.102]"
+     ]
+    }
+   ],
    "source": [
     "m.fit(lr, 3, metrics=[rmse])"
    ]
