Updated MixedInput Model result

--- a/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
@@ -3384,7 +3384,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 19800/147084 [02:35<16:39, 127.28it/s, loss=0.102]"
+      "epoch      trn_loss   val_loss   rmse       \n",
+      "    0      0.092207   0.157164   0.378365  \n",
+      " 18%|█▊        | 26785/147084 [03:28<15:37, 128.26it/s, loss=0.0989]"
      ]
     }
    ],
