--- a/challenge_1/notebooks/Results_and_Conclusions.ipynb
+++ b/challenge_1/notebooks/Results_and_Conclusions.ipynb
@@ -272,10 +272,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Pytorch Embedded Categorical Model\n",
     "\n",
@@ -300,11 +298,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "epoch\n",
+    "0 RMSE 0.378365"
+   ]
   },
   {
    "cell_type": "markdown",
