Updated MixedInput Model result

--- a/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
@@ -3386,7 +3386,8 @@
      "text": [
       "epoch      trn_loss   val_loss   rmse       \n",
       "    0      0.092207   0.157164   0.378365  \n",
-      " 18%|█▊        | 26785/147084 [03:28<15:37, 128.26it/s, loss=0.0989]"
+      "    1      0.099166   0.157221   0.377926  \n",
+      "  3%|▎         | 4017/147084 [00:31<18:46, 127.05it/s, loss=0.0918]"
      ]
     }
    ],
