--- a/challenge_1/notebooks/Results_and_Conclusions.ipynb
+++ b/challenge_1/notebooks/Results_and_Conclusions.ipynb
@@ -298,11 +298,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "epoch\n",
-    "0 RMSE 0.378365"
+    "0 RMSE 0.378365\n",
+    "1 RMSE 0.377926"
    ]
   },
   {
