--- a/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
+++ b/challenge_1/notebooks/4_6_b_forecast_NN_hh.ipynb
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {
     "hidden": true
    },
@@ -3387,8 +3387,18 @@
       "epoch      trn_loss   val_loss   rmse       \n",
       "    0      0.092207   0.157164   0.378365  \n",
       "    1      0.099166   0.157221   0.377926  \n",
-      "  3%|▎         | 4017/147084 [00:31<18:46, 127.05it/s, loss=0.0918]"
+      "    2      0.096794   0.157577   0.378129  \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.15758]), 0.37812946130842784]"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3397,18 +3407,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "777cbd85b5994d6a9e06d8c8a73614a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Epoch', max=3), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch      trn_loss   val_loss   rmse       \n",
+      "    0      0.100198   0.157108   0.377509  \n",
+      "    1      0.10011    0.157071   0.377429  \n",
+      "    2      0.095499   0.157049   0.377386  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.15705]), 0.3773863050560186]"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m.fit(lr, 3, metrics=[rmse], cycle_len=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3420,7 +3465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3432,7 +3477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3444,18 +3489,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3962937"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rmse(x,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3467,7 +3523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3479,16 +3535,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dayYear</th>\n",
+       "      <th>dayMonth</th>\n",
+       "      <th>dayWeek</th>\n",
+       "      <th>dayDay</th>\n",
+       "      <th>dayDayofweek</th>\n",
+       "      <th>dayDayofyear</th>\n",
+       "      <th>precipType</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>bank_holiday</th>\n",
+       "      <th>stdorToU</th>\n",
+       "      <th>Acorn</th>\n",
+       "      <th>Acorn_grouped</th>\n",
+       "      <th>dayElapsed</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>windBearing</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>dewPoint</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>apparentTemperature</th>\n",
+       "      <th>windSpeed</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>cloudCover</th>\n",
+       "      <th>uvIndex</th>\n",
+       "      <th>moonPhase</th>\n",
+       "      <th>from_sunrise</th>\n",
+       "      <th>to_sunset</th>\n",
+       "      <th>Afteris_bank_holiday</th>\n",
+       "      <th>Beforeis_bank_holiday</th>\n",
+       "      <th>LCLid</th>\n",
+       "      <th>energy(kWh/hh)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-02-02</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>Breezy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Std</td>\n",
+       "      <td>ACORN-A</td>\n",
+       "      <td>Affluent</td>\n",
+       "      <td>1.391299e+09</td>\n",
+       "      <td>12.49</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>7.54</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>996.840027</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>-1013.0</td>\n",
+       "      <td>44640.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MAC005042</td>\n",
+       "      <td>0.304716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-02</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>Breezy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Std</td>\n",
+       "      <td>ACORN-F</td>\n",
+       "      <td>Comfortable</td>\n",
+       "      <td>1.391299e+09</td>\n",
+       "      <td>12.49</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>7.54</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>996.840027</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>-1013.0</td>\n",
+       "      <td>44640.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>MAC000201</td>\n",
+       "      <td>0.157255</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           dayYear dayMonth dayWeek dayDay dayDayofweek dayDayofyear  \\\n",
+       "day_time                                                               \n",
+       "2014-02-02    2014        2       5      2            6           33   \n",
+       "2014-02-02    2014        2       5      2            6           33   \n",
+       "\n",
+       "           precipType summary bank_holiday stdorToU    Acorn Acorn_grouped  \\\n",
+       "day_time                                                                     \n",
+       "2014-02-02       rain  Breezy            0      Std  ACORN-A      Affluent   \n",
+       "2014-02-02       rain  Breezy            0      Std  ACORN-F   Comfortable   \n",
+       "\n",
+       "              dayElapsed  visibility  windBearing  temperature  dewPoint  \\\n",
+       "day_time                                                                   \n",
+       "2014-02-02  1.391299e+09       12.49        218.0         7.54      2.82   \n",
+       "2014-02-02  1.391299e+09       12.49        218.0         7.54      2.82   \n",
+       "\n",
+       "              pressure  apparentTemperature  windSpeed  humidity  cloudCover  \\\n",
+       "day_time                                                                       \n",
+       "2014-02-02  996.840027                 3.56       7.75      0.72        0.22   \n",
+       "2014-02-02  996.840027                 3.56       7.75      0.72        0.22   \n",
+       "\n",
+       "            uvIndex  moonPhase  from_sunrise  to_sunset  Afteris_bank_holiday  \\\n",
+       "day_time                                                                        \n",
+       "2014-02-02      1.0        0.1         458.0    -1013.0               44640.0   \n",
+       "2014-02-02      1.0        0.1         458.0    -1013.0               44640.0   \n",
+       "\n",
+       "            Beforeis_bank_holiday      LCLid  energy(kWh/hh)  \n",
+       "day_time                                                      \n",
+       "2014-02-02                    0.0  MAC005042        0.304716  \n",
+       "2014-02-02                    0.0  MAC000201        0.157255  "
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joined_test.head(n=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -3500,7 +3750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {
     "collapsed": true,
     "hidden": true
