--- a/challenge_1/notebooks/Results_and_Conclusions.ipynb
+++ b/challenge_1/notebooks/Results_and_Conclusions.ipynb
@@ -227,7 +227,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[0.268] 0.2, 0.1, 0.2, 0.2, 0.2, 0.2, 0.2\n",
+    "\n",
+    "#second mac prediction still running "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,14 +309,21 @@
    "source": [
     "epoch\n",
     "0 RMSE 0.378365\n",
-    "1 RMSE 0.377926"
+    "1 RMSE 0.377926\n",
+    "2 RMSE 0,377\n",
+    "\n",
+    "prediction\n",
+    "\n",
+    "RMSE 0.3962937"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notes: ARIMA \n",
+    "## Notes: \n",
+    "\n",
+    "ARIMA \n",
     "\n",
     "a quick first pass at an ARIMA model can be found in 4_1_forecast_ARIMA but I did not have enough time to re-visit to incorporate in this results dashboard"
    ]
