--- a/challenge_1/notebooks/Results_and_Conclusions.ipynb
+++ b/challenge_1/notebooks/Results_and_Conclusions.ipynb
@@ -329,17 +329,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Clustering\n",
     "\n",
     "See 3_0_a and 3_0_b for image based tsne clustering. Parameters could be tweaked and potentially more infomation extracted from clustering plots. I had planned to divide the tsne cluster plot of CNN generated image similarity clusters into a grid - then select representative MAC's from each cluster for forecasting but did not have time\n",
     "\n",
-    "See 3_1 for KNN based clusting using Dynamic Time Warping similarity measure. I ram out of RAM running this notebbok (last 2 cells) and did not have time "
+    "See 3_1 for KNN based clusting using Dynamic Time Warping similarity measure. I ram out of RAM running this notebbok (last 2 cells) and did not have time test on a smaller dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
