--- a/challenge_1/notebooks/3_1_clustering_kNN_ds.ipynb
+++ b/challenge_1/notebooks/3_1_clustering_kNN_ds.ipynb
@@ -579,6 +579,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can clearly see different start and stop dates for data capture for many of the handomly selected households above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Narrow the range some more"
    ]
   },
