--- a/challenge_1/notebooks/Results_and_Conclusions.ipynb
+++ b/challenge_1/notebooks/Results_and_Conclusions.ipynb
@@ -44,6 +44,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![title](nb_images/mac000230.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MAC000230 half hourly samples (x)(where x = day * 48) for data period vs hour of day coloured by energy(kWh/hh), where yellow is c. 2.5 energy(kWh/hh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](nb_images/mac000100.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAC000230 half hourly samples (x)(where x = day * 48) for data period vs hour of day coloured by energy(kWh/hh), where yellow is c. 2.5 energy(kWh/hh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simple baseline historical forecast"
    ]
   },
@@ -73,6 +103,13 @@
     "week-one_year_ago: [0.301] 0.3, 0.2, 0.2, 0.2, 0.2, 0.2, 0.3\n",
     "weekly: [0.301] 0.3, 0.2, 0.2, 0.2, 0.2, 0.2, 0.3\n",
     "daily: [0.291] 0.3, 0.2, 0.2, 0.2, 0.2, 0.2, 0.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](nb_images/4_0_daily_baseline_daily.png)"
    ]
   },
   {
@@ -128,6 +165,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "mac000230 | mac000100\n",
+    "- | - \n",
+    "![alt](nb_images/4_2_a_ml_direct_mac000230.png) | ![alt](nb_images/4_2_a_ml_direct_mac000100.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mac000230 | mac000100\n",
+    "- | - \n",
+    "![alt](nb_images/4_2_a_ml_direct_mac000230_7_day_forecast_actuals.png) | ![alt](nb_images/4_2_a_ml_direct_mac000100_7_day_forecast_actuals.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 4_2_b_forecast_ML_recursive.py "
    ]
   },
@@ -164,6 +219,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "mac000230 | mac000100\n",
+    "- | - \n",
+    "![alt](nb_images/4_2_b_ml_recursive_mac000230.png) | ![alt](nb_images/4_2_b_ml_recursive_mac000100.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day ve RMSE in kWh/hh (not Wh as wrongly in image) for models in code 4_2_b_forecast_ML_recursive.py "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mac000230 | mac000100\n",
+    "- | - \n",
+    "![alt](nb_images/4_2_b_ml_recursive_mac000230_7_day_forecast_actuals.png) | ![alt](nb_images/4_2_b_ml_recursive_mac000100_7_day_forecast_actuals.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## CNN Models\n",
     "\n",
     "Implemented in Keras and Tensorflow\n",
@@ -183,6 +263,22 @@
     "cnn: [0.242] 0.1, 0.1, 0.2, 0.1, 0.2, 0.1, 0.2\n",
     "    \n",
     "cnn: [0.302] 0.3, 0.1, 0.2, 0.2, 0.1, 0.1, 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mac000230 | mac000100\n",
+    "- | - \n",
+    "![alt](nb_images/4_5_a_mutichannel_cnn_mac000230.png) | ![alt](nb_images/4_5_a_mutichannel_cnn_mac000100.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day vs RMSE in kWh/hh for model in code 4_5_a_forecast_multichannel_cnn.py "
    ]
   },
   {
@@ -231,6 +327,20 @@
     "[0.268] 0.2, 0.1, 0.2, 0.2, 0.2, 0.2, 0.2\n",
     "\n",
     "#second mac prediction still running "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](nb_images/4_7_mutivariate_enc_dec_lstm_mac000230.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day vs RMSE in kWh/hh for model in code 4_7_forecast_multivariate_encoder_decoder_lstm.py"
    ]
   },
   {
@@ -322,6 +432,8 @@
    "metadata": {},
    "source": [
     "## Notes: \n",
+    "\n",
+    "More plots displaying forecasts of actual / predicted for all models above would have been nice but didnt have time to do this.\n",
     "\n",
     "ARIMA \n",
     "\n",
